Мелкие добавление saas

--- a/css/main.css
+++ b/css/main.css
@@ -1065,7 +1065,7 @@ body {
   background-color: rgba(33, 150, 243, 0.9);
 }
 
-.project__item .project__text {
+.project__text {
   padding: 63px 24px;
   color: #ffffff;
   font-size: 18px;
