--- a/sass/components/_container.scss
+++ b/sass/components/_container.scss
@@ -1,7 +1,7 @@
 .container {
+    max-width: 1200px;
     margin-left: auto;
     margin-right: auto;
-    width: 1200px;
     padding-left: 15px;
     padding-right: 15px;
     /* outline: 2px solid tomato; */
